<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Moonlight</string>
    <string name="hello_world">Hello World</string>
    <string name="list_item">Dummy List Item</string>

    <!-- Directional labels -->
    <string name="north">N</string>
    <string name="northeast">NE</string>
    <string name="east">E</string>
    <string name="southeast">SE</string>
    <string name="south">S</string>
    <string name="southwest">SW</string>
    <string name="west">W</string>
    <string name="northwest">NW</string>

    <!-- Default View Values -->
    <string name="default_nameday" translatable="false">Today</string>
    <string name="default_day" translatable="false">January 1, 2000</string>
    <string name="default_temp_high" translatable="false">20</string>
    <string name="default_temp_low" translatable="false">10</string>
    <string name="default_weather" translatable="false">Clear</string>
    <string name="default_humidity" translatable="false>">Humidity: 100%</string>
    <string name="default_wind" translatable="false">Wind: 10 km/h NW</string>
    <string name="default_pressure" translatable="false">Pressure: 1000 hPa</string>

    <!-- Image desc -->
    <string name="image_forecast">Forecast Image</string>

    <!-- Actions -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_viewmap">View Map</string>
    <string name="action_share">Share</string>

    <!-- Fragment titles -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference labels -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_unit_label">Units</string>
    <string name="pref_unit_key" translatable="false">units</string>
    <string name="pref_unit_metric">metric</string>
    <string name="pref_unit_imperial">imperial</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>
    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Strings related to weather formatting data -->
    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Humidity format in percentage -->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g>%%</string>

    <!-- Wind format in mph -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1.1f</xliff:g> mph <xliff:g id="direction">%s</xliff:g></string>

    <!-- Wind format in km/h -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1.1f</xliff:g> km/h <xliff:g id="direction">%s</xliff:g></string>

    <!-- Pressure format -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

</resources>
