<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:gravity="center_vertical">
        <!--android:text="@string/list_item"-->
        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_nameday"
            android:id="@+id/list_item_dayname_textview" />
        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_day"
            android:id="@+id/list_item_date_textview" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp" >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="5dp"
                android:gravity="center_vertical">
                <!--android:text="@string/list_item"-->
                <TextView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/default_temp_high"
                    android:id="@+id/list_item_high_textview"
                    android:padding="2.5dp" />
                <TextView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="2.5dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/default_temp_low"
                    android:id="@+id/list_item_low_textview" />
            </LinearLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <!--android:text="@string/list_item"-->
                <ImageView
                    android:id="@+id/list_item_icon"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:src="@drawable/art_clear"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/image_forecast"/>
                <TextView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center"
                    android:text="@string/default_weather"
                    android:id="@+id/list_item_forecast_textview" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_humidity"
            android:id="@+id/list_item_humidity_textview" />

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_wind"
            android:id="@+id/list_item_wind_textview" />

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_pressure"
            android:id="@+id/list_item_pressure_textview" />
    </LinearLayout>
</ScrollView>