<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="5dp"
    android:background="@drawable/touch_selector_today">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="15dp"
        android:paddingStart="60dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:gravity="center_vertical">
        <TextView
            style="@style/list_item_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/default_day"
            android:paddingBottom="7.5dp"
            android:id="@+id/list_item_date_textview" />
        <TextView
            style="@style/list_item_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="72sp"
            android:text="@string/default_temp_high"
            android:id="@+id/list_item_high_textview"
            android:padding="2.5dp" />
        <TextView
            style="@style/list_item_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2.5dp"
            android:paddingLeft="10dp"
            android:gravity="start"
            android:textSize="36sp"
            android:text="@string/default_temp_low"
            android:id="@+id/list_item_low_textview" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/list_item_icon"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/image_forecast"
            android:src="@drawable/ic_clear" />
        <TextView
            style="@style/list_item_textview"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/default_weather"
            android:id="@+id/list_item_forecast_textview" />
    </LinearLayout>
</LinearLayout>